2009-01-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update Libgcrypt.

2009-01-20  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/installer.nsi: Change german translation of
	MUI_LANGDLL_INFO.

2009-01-17  Colin Leroy  <colin@colino.net>

	* patches/claws-mail-3.7.0/06-bug_1825.patch
		Fix patch.

2009-01-17  Colin Leroy  <colin@colino.net>

	* patches/claws-mail-3.7.0/06-bug_1825.patch
		Fix opening IMAP mails in non-ascii folders.

2009-01-16  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gpgol.

2009-01-12  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gnupg and libksba.

2009-01-09  Colin Leroy  <colin@colino.net>

	* patches/claws-mail-3.7.0/01-bug_1810.patch
		Fix crash when hitting 'o' (disabled Open With)
	* patches/claws-mail-3.7.0/02-bug_1813.patch
		Fix themes installation
	* patches/claws-mail-3.7.0/03-bug_1814.patch
		Workaround wrong window positioning when taskbar
		is on top
	* patches/claws-mail-3.7.0/04-bug_1815.patch
		Fix Drag-n-drop to Compose window
	* patches/claws-mail-3.7.0/05-bug_1816.patch
		Fix bogus --attach error message

2008-12-19  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws Mail to 3.7.0

2008-12-14  Colin Leroy  <colin@colino.net>

	* packages/packages.current, src/inst-claws-mail.nsi,
	src/uninst-claws-mail.nsi: Update Claws Mail, and install 
	ca-certificates.crt to be able to verify certificates

2008-12-13  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update GnuTLS and libtasn - CVE-2008-4989
	http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2008-4989

2008-12-12  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws Mail and plugins
	Fixes bug 184, 'Claws doesn't start when username contains Umlauts'

2008-12-09  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gnupg

2008-12-02  Werner Koch  <wk@g10code.com>

	Release 1.9.13.
