@@ -243,6 +243,7 @@ WinPT is
   You should have received a copy of the GNU General Public License
   along with WinPT; if not, write to the Free Software Foundation, 
   Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
+
  
 BZIP2 is 
 
@@ -285,6 +286,7 @@ BZIP2 is
   jseward@bzip.org
   bzip2/libbzip2 version 1.0.4 of 20 December 2006
 
+
 ADNS
 
   adns is Copyright 2008 g10 Code GmbH, Copyright 1997-2000,2003,2006
@@ -305,3 +307,30 @@ ADNS
   along with adns, or one should be available above; if not, write to
   the Free Software Foundation, 59 Temple Place - Suite 330, Boston,
   MA 02111-1307, USA, or email adns-maint@chiark.greenend.org.uk.
+
+
+Paperkey
+
+  Copyright (C) 2007, 2008, 2009 David Shaw <dshaw@jabberwocky.com>
+  
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+  
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+  
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, write to the Free Software
+  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+  MA 02110-1301, USA.
+ 
+  The included man page is
+  
+  Copyright (C) 2007 Peter Palfrader <peter@palfrader.org>
+ 
+  Examples have been taken from David Shaw's README. The license is
+  the same as for Paperkey.
