@@ -339,6 +339,13 @@ chk  7fe96c4149fc46b02a824370fe63ae3c7df7fd8c
 
 
 #
+#  GnuPG utilities
+#
+server http://www.jabberwocky.com/software/paperkey
+chk  ddb5fa5612df365ae0ba324ba307d3aa2e549981  
+file paperkey-1.0.tar.gz
+
+#
 # adns
 #
 server ftp://ftp.g10code.com/g10code/adns
