@@ -1,3 +1,13 @@
+2009-01-23  Werner Koch  <wk@g10code.com>
+
+	* src/inst-paperkey.nsi, src/uninst-paperkey.nsi: New.
+	* src/inst-sections.nsi: Install Paperkey.
+	* include/config.nsi.in: Add Paperkey.
+	* src/Makefile.am (EXTRA_DIST): Add paperkey.
+	(gpg4win_pkg_paperkey_configure): New.
+	(gpg4win_pkg_paperkey_post_install): New.
+	* configure.ac: Add Paperkey.
+
 2009-01-22  Werner Koch  <wk@g10code.com>
 
 	* packages/packages.current: Update Libgcrypt.
@@ -3167,7 +3177,7 @@ s2008-04-23  Werner Koch  <wk@g10code.com>
 	* packages/download.sh: Fix downloading of Gtk source packages.
 
 
- Copyright 2005, 2006, 2007, 2008 g10 Code GmbH
+ Copyright 2005, 2006, 2007, 2008, 2009 g10 Code GmbH
 
  This file is free software; as a special exception the author gives
  unlimited permission to copy and/or distribute it, with or without
